force-app/main/default/objects/vlocity_cmt__ContractVersionDiscount__c/vlocity_cmt__ContractVersionDiscount__c.object-meta.xml
<CustomObject>
    <description>A contractual discount provided to a customer for future purchases within the contract time period.</description>
    <label>Contract Document Discount</label>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContractDocumentDiscounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>