force-app/main/default/objects/vlocity_cmt__ContractVersionDiscount__c/fields/vlocity_cmt__ContractVersionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ContractVersionId__c</fullName>
    <label>Contract Document</label>
    <referenceTo>vlocity_cmt__ContractVersion__c</referenceTo>
    <relationshipLabel>Contract Document Discounts</relationshipLabel>
    <relationshipName>ContractVersionDiscounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>